syntax = "proto3";

package antidotedatastore;
option go_package = "github.com/dimitriosvasilas/proteus/protos/antidote";

service AntidoteDataStore {
  rpc watchAsync(SubRequest) returns (stream Operation) {}
}

message SubRequest {
  int64 timestamp = 1;
}

message Operation {
  string dcID = 1;
  string partitionID = 2;
  string key = 3;
  string bucket = 4;
  string crdtType = 5;
  string opType = 6;
  MapOp op = 7;
}

message MapOp {
  string mapKey = 1;
  string mapType = 2;
  string mapVal = 3;
}