syntax = "proto3";

package s3datastore;
option go_package = "github.com/dimitriosvasilas/modqp/protos/s3";

import "utils.proto";

service S3DataStore {
    rpc watchSync(stream OpAck) returns (stream OpStream) {}
    rpc watchAsync(SubRequest) returns (stream OpStream) {}
}

message SubRequest {
    int64 timestamp = 1;
}

message OpAck {
    string msg = 1;
    string opId = 2;
}

message OpStream {
    utils.Operation operation = 1;
}